// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/admin_console/data_grid/DataGrid should match snapshot while loading 1`] = `
<div>
  <div
    class="DataGrid"
  >
    <div
      class="DataGrid_search"
    >
      <div
        class="DataGrid_searchBar"
      >
        <span
          aria-hidden="true"
          class="DataGrid_searchIcon"
        >
          <i
            class="fa fa-search"
            title="Search Icon"
          />
        </span>
        <input
          data-testid="searchInput"
          placeholder="Search"
          type="text"
          value=""
        />
        <i
          class="DataGrid_clearButton fa fa-times-circle hidden"
          data-testid="clear-search"
        />
      </div>
    </div>
    <div
      class="DataGrid_header"
    />
    <div
      class="DataGrid_rows"
    >
      <div
        class="DataGrid_loading"
      >
        <span
          class="LoadingSpinner"
          data-testid="loadingSpinner"
          id="loadingSpinner"
        >
          <span
            class="fa fa-spinner fa-fw fa-pulse spinner"
            title="Loading Icon"
          />
        </span>
        Loading
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/data_grid/DataGrid should match snapshot with content and custom styling on rows 1`] = `
<div>
  <div
    class="DataGrid"
  >
    <div
      class="DataGrid_search"
    >
      <div
        class="DataGrid_searchBar"
      >
        <span
          aria-hidden="true"
          class="DataGrid_searchIcon"
        >
          <i
            class="fa fa-search"
            title="Search Icon"
          />
        </span>
        <input
          data-testid="searchInput"
          placeholder="Search"
          type="text"
          value=""
        />
        <i
          class="DataGrid_clearButton fa fa-times-circle hidden"
          data-testid="clear-search"
        />
      </div>
    </div>
    <div
      class="DataGrid_header"
    />
    <div
      class="DataGrid_rows"
    >
      <div
        class="DataGrid_row"
      />
      <div
        class="DataGrid_row"
      />
      <div
        class="DataGrid_row"
      />
    </div>
  </div>
</div>
`;

exports[`components/admin_console/data_grid/DataGrid should match snapshot with custom classes 1`] = `
<div>
  <div
    class="DataGrid customTable"
  >
    <div
      class="DataGrid_search"
    >
      <div
        class="DataGrid_searchBar"
      >
        <span
          aria-hidden="true"
          class="DataGrid_searchIcon"
        >
          <i
            class="fa fa-search"
            title="Search Icon"
          />
        </span>
        <input
          data-testid="searchInput"
          placeholder="Search"
          type="text"
          value=""
        />
        <i
          class="DataGrid_clearButton fa fa-times-circle hidden"
          data-testid="clear-search"
        />
      </div>
    </div>
    <div
      class="DataGrid_header"
    />
    <div
      class="DataGrid_rows"
    >
      <div
        class="DataGrid_row"
      />
      <div
        class="DataGrid_row"
      />
      <div
        class="DataGrid_row"
      />
    </div>
  </div>
</div>
`;

exports[`components/admin_console/data_grid/DataGrid should match snapshot with no items found 1`] = `
<div>
  <div
    class="DataGrid"
  >
    <div
      class="DataGrid_search"
    >
      <div
        class="DataGrid_searchBar"
      >
        <span
          aria-hidden="true"
          class="DataGrid_searchIcon"
        >
          <i
            class="fa fa-search"
            title="Search Icon"
          />
        </span>
        <input
          data-testid="searchInput"
          placeholder="Search"
          type="text"
          value=""
        />
        <i
          class="DataGrid_clearButton fa fa-times-circle hidden"
          data-testid="clear-search"
        />
      </div>
    </div>
    <div
      class="DataGrid_header"
    />
    <div
      class="DataGrid_rows"
    >
      <div
        class="DataGrid_empty"
      >
        No items found
      </div>
    </div>
  </div>
</div>
`;
